# elm-assist

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
crates/elm-assist-lsp/: Cargo.toml
crates/elm-assist-lsp/src/: backend.rs  convert.rs  main.rs  state.rs
crates/elm-assist-lsp/tests/: analysis_tests.rs  backend_tests.rs  convert_tests.rs
crates/elm-assist-tui/: Cargo.toml
crates/elm-assist-tui/src/: app.rs  command.rs  event.rs  lib.rs  main.rs  watch.rs
crates/elm-assist-tui/src/view/: dashboard.rs  deps.rs  fix_review.rs  help.rs  helpers.rs  lint.rs  mod.rs  search.rs  status_bar.rs  unused.rs
crates/elm-assist-tui/tests/: command_integration.rs  view_smoke.rs
crates/elm-deps/: Cargo.toml
crates/elm-deps/src/: graph.rs  main.rs
crates/elm-fmt/: Cargo.toml  README.md
crates/elm-fmt/src/: main.rs
crates/elm-lint/: Cargo.toml
crates/elm-lint/src/: cache.rs  collect.rs  config.rs  elm_json.rs  fix.rs  lib.rs  main.rs  pipeline.rs  rule.rs  watch.rs
crates/elm-lint/src/rules/: cognitive_complexity.rs  mod.rs  no_always_identity.rs  no_boolean_case.rs  no_confusing_prefix_operator.rs  no_debug.rs  no_deprecated.rs  no_empty_let.rs  no_empty_list_concat.rs  no_empty_record_update.rs  no_fully_applied_prefix_operator.rs  no_identity_function.rs  no_if_true_false.rs  no_inconsistent_aliases.rs  no_list_literal_concat.rs  no_maybe_map_with_nothing.rs  no_missing_documentation.rs  no_missing_type_annotation.rs  no_missing_type_annotation_in_let_in.rs  no_missing_type_expose.rs  no_negation_of_boolean_operator.rs  no_nested_negation.rs  no_pipeline_simplify.rs  no_premature_let_computation.rs  no_record_pattern_in_function_args.rs  no_recursive_update.rs  no_redundant_cons.rs  no_redundantly_qualified_type.rs  no_result_map_with_err.rs  no_shadowing.rs  no_simple_let_body.rs  no_single_pattern_case.rs  no_string_concat.rs  no_todo_comment.rs  no_unnecessary_parens.rs  no_unnecessary_port_module.rs  no_unnecessary_trailing_underscore.rs  no_unoptimized_recursion.rs  no_unsafe_ports.rs  no_unused_custom_type_constructor_args.rs  (+9 more)
crates/elm-lint/tests/: integration_tests.rs  rule_tests.rs
crates/elm-lsp/: Cargo.toml
crates/elm-refactor/: Cargo.toml
crates/elm-refactor/src/commands/: qualify_imports.rs  rename.rs
crates/elm-search/: Cargo.toml
crates/elm-search/src/: search.rs
crates/elm-unused/: Cargo.toml
crates/elm-unused/src/: collect.rs
editors/vscode/: .vscodeignore  README.md  package-lock.json  package.json
editors/vscode/src/: extension.ts
npm/: install.js  package.json
npm/lib/: run.js
