[workspace]
members = [
    "crates/elm-lint",
    "crates/elm-assist-lsp",
    "crates/elm-deps",
    "crates/elm-unused",
    "crates/elm-refactor",
    "crates/elm-search",
    "crates/elm-assist-tui",
    "crates/elm-fmt",
]
resolver = "3"

[profile.release]
lto = "fat"
codegen-units = 1
strip = "symbols"
