[package]
name = "elm-assist-tui"
version = "0.2.0"
edition = "2024"
description = "Interactive terminal dashboard for the elm-assist toolchain"
license = "MIT OR Apache-2.0"

[lib]
name = "elm_assist_tui"
path = "src/lib.rs"

[[bin]]
name = "elm-assist-tui"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
notify = { version = "7", features = ["macos_fsevent"] }
rayon = "1"
serde_json = "1"
elm-ast = "0.1.2"
elm-lint = { path = "../elm-lint" }
elm-unused = { path = "../elm-unused" }
elm-deps = { path = "../elm-deps" }
elm-search = { path = "../elm-search" }
elm-refactor = { path = "../elm-refactor" }
