[package]
name = "elm-deps"
version = "0.3.0"
edition = "2024"
description = "Module dependency graph analyzer for Elm projects"
license = "MIT OR Apache-2.0"
repository = "https://github.com/joshburgess/elm-assist"
homepage = "https://github.com/joshburgess/elm-assist"
readme = "README.md"
keywords = ["elm", "dependencies", "graph", "ast", "cli"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
elm-ast = "0.2.0"
