[package]
name = "elm-lint"
version = "0.3.0"
edition = "2024"
description = "Fast Elm linter with built-in rules"
license = "MIT OR Apache-2.0"
repository = "https://github.com/joshburgess/elm-assist"
homepage = "https://github.com/joshburgess/elm-assist"
readme = "README.md"
keywords = ["elm", "lint", "linter", "ast", "cli"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
elm-ast = "0.2.0"
clap = { version = "4", features = ["derive"] }
ariadne = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
rayon = "1.10"
notify = { version = "7", features = ["macos_fsevent"] }
